3.1  Fri Nov 30 11:33:04 CET 2007
	- IMPORTANT BUGFIX: a too long final literal run would corrupt data
          in the encoder (this was introduced in 3.0 only, earlier versions
          are safe).

3.0  Tue Nov 13 22:13:09 CET 2007
	- switched to 2-clause bsd with "GPL v2 or any later version" option.
        - speed up compression by ~10-15% in common cases
          by some manual unrolling.
        - import some compiler tricks from JSON::XS, for further speed-ups.
        - tune hash functions depending on ULTRA_FAST or VERY_FAST settings.
        - for typical binary data (e.g. /bin/bash, memory dumps,
          canterbury corpus etc.), speed is now comparable to fastlz, but
          with better compression ratio. with ULTRA_FAST, it's typically
          3-15% faster than fastlz while still maintaining a similar ratio.
          (amd64 and core 2 duo, ymmv). thanks a lot for the competition :)
        - undo inline assembly in compressor, it is no longer helpful.
        - no changes to the decompressor.
        - use a HLOG of 16 by default now (formerly 15).

2.1  Fri Nov  2 13:34:42 CET 2007
	- switched to a 2-clause bsd license with GPL exception.
	- get rid of memcpy.
        - tentatively use rep movsb on x86 and x86_64 (gcc only) for a
          moderate speed improvement.
        - applied patch by Kein-Hong Man to maske lzf.c compile under
          the crippled mingw32 environment.

2.0  Fri Feb 16 23:11:18 CET 2007
	- replaced lzf demo by industrial-strength lzf utility with behaviour
          similar other compression utilities. Thanks for Stefan Traby for
          rewriting it!
        - fix state arg prototype.

1.7  Wed Sep 27 17:29:15 CEST 2006
	- remove bogus "unlzf" patch.
          note to self: never accept well-meant patches.
	- make lzf more robust in presence of padding bytes or sudden eof.

1.6  Fri Jul  7 17:31:26 CEST 2006
	- the lzf example utility will now uncompress if invoked
          as "unlzf" (patch by Scott Feeney).